--- a/content/docs/index.mdx
+++ b/content/docs/index.mdx
@@ -1,13 +1,51 @@
 ---
-title: Hello World
-description: Your first document
+title: RN Animated Components
+description: Beautiful React Native animated components with smooth transitions
 ---
 
-Welcome to the docs! You can start writing documents in `/content/docs`.
-
-## What is Next?
+## Components
 
 <Cards>
-  <Card title="Learn more about Next.js" href="https://nextjs.org/docs" />
-  <Card title="Learn more about Fumadocs" href="https://fumadocs.vercel.app" />
+  <Card href="/docs/components/animated-number" title="AnimatedNumber">
+    Animated number display with smooth transitions for digits and separators
+  </Card>
+  <Card href="/docs/components/circle-loader" title="CircleLoader">
+    Circular animated loader with balls moving on a perfect circular path
+  </Card>
+  <Card href="/docs/components/liquid-switch" title="LiquidSwitch">
+    Custom toggle switch with liquid-like sliding effect and optional icons
+  </Card>
+  <Card href="/docs/components/scratch-card" title="ScratchCard">
+    Scratchable canvas component that reveals hidden content with gestures
+  </Card>
 </Cards>
+
+## Quick Start
+
+Get started with any component in minutes:
+
+1. **Choose a component** from the list above
+2. **Copy the component file** into your project
+3. **Install dependencies** if not already installed
+4. **Import and use** in your React Native app
+
+```bash npm2yarn
+npx expo install react-native-reanimated @shopify/react-native-skia react-native-gesture-handler
+```
+
+<Callout>
+All components are **self-contained** and work by simply copying the component file into your project. No additional configuration required!
+</Callout>
+
+## Features
+
+- **High Performance** - Built with Reanimated and Skia
+- **Copy & Paste** - Self-contained components
+- **Customizable** - Extensive props and styling options  
+- **Well Documented** - Comprehensive examples and API docs
+- **Smooth Animations** - Physics-based transitions
+- **TypeScript Ready** - Full type definitions included
+
+---
+
+Made with love by **niche.guys**
